--- a/Labs/Lab 13/Permutation Test.Rmd
+++ b/Labs/Lab 13/Permutation Test.Rmd
@@ -52,7 +52,7 @@ That means, on average, babies born to non-smoking mothers weigh about 215 grams
 ## Simulate the Null Distribution
 Under the null hypothesis 
 $H_0$, we assume that smoking has no real effect on baby weight.
-If that’s true, then the labels “Yes” and “No” (for Smoker) are meaningless — we could shuffle them randomly, and any difference in means would just be due to chance.
+If that’s true, then the labels “Yes” and “No” (for Smoker) are meaningless, and any difference in means would just be due to chance.
 
 So, we’ll simulate that process many times:
 
@@ -102,7 +102,7 @@ p_value
 After running the permutation test, the output of the p-value is 0.
 
 This result means that none of the 5,000 simulated mean differences were as large as the observed difference of 215 g.
-It doesn’t mean the probability is exactly zero — it just means the p-value is smaller than the resolution of our simulation (1 / 5000 = 0.0002).
+It doesn’t mean the probability is exactly zero; it just means the p-value is smaller than the resolution of our simulation (1 / 5000 = 0.0002).
 
 In other words, $p\text{-value} < 0.0002$.
 
